src/app/skills/skills.component.scss
.container{
    scroll-margin-top: 0;
display: flex;
flex-direction: column;
justify-content: space-between;
align-items: center;
width:100%;
padding: 50px 0;

.skills_container{

display: flex;
flex-direction: column;
justify-content: space-between;
align-items: center;
width:100%;

}
    h2{
        margin-top: 50px;
        color:white;
      
        font-size: 1.8rem;

            font-family: Source Code Pro;
        .skills{
            font-size: 2.4rem;
            color: var(--primary-pink);
            font-family:Orbitron;
            
        }
    }
   .skills_description{
    display: flex;
    height:250px;
    width:70%;
    margin:80px 50px;
    padding:20px 50px;
    align-items: center;
justify-content: center;
    box-shadow: inset 0 0 20px 0px  var(--primary-darkblue), 0 0 14px 3px white,inset 0 0 20px 10px var(--primary-pink),0px 50px 20px -30px black;
    
    
    .img_cont{
        height:50%;
        aspect-ratio: 1;
    box-shadow: 0 0 10px 0 white, 0 -5px 10px 0 white, 0 0 7px 7px var(--primary-pink);
    border-radius: 30%;
    padding:10px;
display: flex;
justify-content: center;
align-items: center;
box-sizing: content-box;
margin-right: auto;
    img{
        height:80%;
        width:80%;


    }}
    p{
        color:white;
        text-shadow: 1px -1px #1a1a1a;
        margin-left: 30px;
        box-shadow: 0px 12px 8px -9px var(--primary-pink),0px -12px 8px -9px var(--primary-pink);
        padding: 10px 5%;
        line-height:1.5rem;
        font-family: Montserrat;
    }
   }
   .skills_selection{
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    
    
    width:calc(70% + 100px);
    gap:50px;
    row-gap: 50px;
    .skill{
position:relative;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background-color: var(--primary-darkblue);
        height:80px;
        border-radius: 7px;
       box-shadow: 0 0 5px 3px black;
       white-space: nowrap;
       transition: all 300ms;
        &:hover{
            background-color: var(--primary-pink);
            scale: 1.1;
translate: 0 -5px;
            span{
       color:var(--primary-pink);
            }
        }
        &.focused{
            background-color: var(--primary-pink);
            scale: 1.1;

            box-shadow: inset 0 0 7px 4px white;
            span{
                color:var(--primary-blue)
            }
        }
        img{
            height: 50px;
            width:50px;
        }
        span{

       padding-bottom: 3px;
                transition: color 700ms;
        position: absolute;
        bottom:0;
        left: 50%;
        translate: -50% 150%;
        color:white;
        letter-spacing: 2px;
        font-family: Montserrat;
        font-weight: 600;
        }
    }
   }
}
@media (max-width:700px) {
    .container{
        h2{
            font-size: 0;
        }
        .skills_description{
            position: relative;
            flex-direction: column;
            justify-content: space-around;
            align-items: center;
            margin-right: 0;
            height: calc(100vh - 150px);
        
            padding: 20px;
            width: calc( 100% - 50px);
            p{
                width: 100%;
                margin: 0;
                text-align: center;
                font-size: 0.9rem;
            }
            .img_cont{
                height: 90px;
                width: 90px;
                margin-right: 0;

                img{}
            }
        }
        .skills_selection{
            grid-template-columns: repeat(2,minmax(50px,1fr));
            gap: 25px;
            row-gap: 50px;
            
            width: calc(100% - 50px);
            margin: 0 25px;
            .skill{
           
            }
        }
    }
    
}

